I resolved some spacing issues with the header

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ main>h1 {
 
 .my-projects {
   display: grid;
-  grid-template: repeat(2, max(480px, 35vh)) / repeat(3, 1fr);
+  grid-template: repeat(2, max(380px, 35vh)) / repeat(3, 1fr);
   gap: 3rem;
   width: 100%;
   justify-items: center;
@@ -259,6 +259,10 @@ address {
 }
 
 @media screen and (min-width: 641px) and (max-width: 1023px) {
+  header {
+      height: clamp(320px, 100vh, 1000px);
+  }
+  
   header::before {
     content: " ";
     width: 200px;
@@ -272,7 +276,7 @@ address {
   }
   
   .my-projects {
-    grid-template: repeat(3, max(480px, 35vh)) / repeat(2, 1fr);
+    grid-template: repeat(3, max(380px, 28vh)) / repeat(2, 1fr);
     z-index: 2;
   }
   
